--- a/GestionBBDD.csproj
+++ b/GestionBBDD.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -113,6 +114,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="bin\Debug\OIP.jpg" />
+    <None Include="bin\Debug\ptrjuanlu.jpg" />
     <Content Include="OIP.jpg" />
     <Content Include="ptrjuanlu.jpg" />
   </ItemGroup>
